--- a/sp03-userservice/src/main/resources/application.properties
+++ b/sp03-userservice/src/main/resources/application.properties
@@ -5,5 +5,5 @@ server.port=8101
 #自定义属性
 sp.user-service.users=[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},{\"id\":8, \"username\":\"def\",\"password\":\"456\"},{\"id\":9, \"username\":\"ghi\",\"password\":\"789\"}]
 #配置注册中心地址
-eureka.client.service-url.defaultZone=http://eureka1:2001/eureka
+eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka1:2002/eureka
 
