--- a/sp04-orderservice/src/main/resources/application.properties
+++ b/sp04-orderservice/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.application.name=order-service
 # 应用服务 WEB 访问端口
 server.port=8201
 #配置注册中心地址
-eureka.client.service-url.defaultZone=http://eureka1:2001/eureka
+eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka1:2002/eureka
 
 
