使用ribbon远程调用item、user、order服务集群完成

--- a/sp05-eureka/src/main/resources/application-eureka1.properties
+++ b/sp05-eureka/src/main/resources/application-eureka1.properties
@@ -1,8 +1,8 @@
-#ÉèÖÃ×¢²áÖĞĞÄÃû×Ö
-eureka.instance.hostname=eureka1
-#²»Ïò×Ô¼º×¢²á
-eureka.client.register-with-eureka=true
-#µ¥Ì¨·şÎñ²»À­È¡×Ô¼º
-eureka.client.fetch-registry=true
-#Ïòeureka2×¢²á
-eureka.client.service-url.defaultZone=http://eureka2:2002/eureka
+##ï¿½ï¿½ï¿½ï¿½×¢ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
+#eureka.instance.hostname=eureka1
+##ï¿½ï¿½ï¿½ï¿½ï¿½Ô¼ï¿½×¢ï¿½ï¿½
+#eureka.client.register-with-eureka=true
+##ï¿½ï¿½Ì¨ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È¡ï¿½Ô¼ï¿½
+#eureka.client.fetch-registry=true
+##ï¿½ï¿½eureka2×¢ï¿½ï¿½
+#eureka.client.service-url.defaultZone=http://eureka2:2002/eureka
