--- a/sp05-eureka/src/main/resources/application.properties
+++ b/sp05-eureka/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-# 应用名称
-spring.application.name=eureka-server
-#端口
-server.port=2001
-#设置注册中心名字
-eureka.instance.hostname=eureka1
-#关闭保护模式
-eureka.server.enable-self-preservation=false
-#不向自己注册
-eureka.client.register-with-eureka=false
-#单台服务不拉取自己
-eureka.client.fetch-registry=false
-
-
-
-
+## 应用名称
+#spring.application.name=eureka-server
+##端口
+#server.port=2001
+##设置注册中心名字
+#eureka.instance.hostname=eureka1
+##关闭保护模式
+#eureka.server.enable-self-preservation=false
+##不向自己注册
+#eureka.client.register-with-eureka=false
+##单台服务不拉取自己
+#eureka.client.fetch-registry=false
+#
+#
+#
+#
