Hystrix系统容错、Hystrix-dashboard仪表盘、feign声明式客户端

--- a/sp04-orderservice/pom.xml
+++ b/sp04-orderservice/pom.xml
@@ -42,6 +42,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <!--健康检查，检测故障日志-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
 
     </dependencies>
 
