--- a/sp06-ribbon/src/main/resources/application.yml
+++ b/sp06-ribbon/src/main/resources/application.yml
@@ -10,3 +10,9 @@ eureka:
   client:
     service-url:
       defaultZone: http://eureka1:2001/eureka,http://eureka1:2002/eureka
+
+#配置重试的次数和更换服务器的次数
+ribbon:
+  MaxAutoRetries: 1
+  MaxAutoRetriesNextServer: 2
+  OkToRetryOnAllOperations: true
