feign声明式客户端 重试、熔断

--- a/sp09-feign/src/main/resources/application.properties
+++ b/sp09-feign/src/main/resources/application.properties
@@ -16,3 +16,6 @@ ribbon.ReadTimeout=1000
 
 #启用Hystrix
 feign.hystrix.enabled=true
+
+#只启用hystrix监控项目
+management.endpoints.web.exposure.include=hystrix.stream
