--- a/sp04-orderservice/pom.xml
+++ b/sp04-orderservice/pom.xml
@@ -12,7 +12,7 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spring-boot.version>2.3.5.RELEASE</spring-boot.version>
+        <spring-boot.version>2.3.6.RELEASE</spring-boot.version>
     </properties>
 
     <dependencies>
@@ -32,6 +32,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!--项目工具依赖-->
         <dependency>
             <groupId>cn.tedu</groupId>
             <artifactId>sp01-commons</artifactId>
@@ -46,6 +47,16 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <!--声明式客户端-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <!--系统容错-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
 
 
@@ -85,7 +96,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.3.5.RELEASE</version>
+                <version>2.3.6.RELEASE</version>
                 <configuration>
                     <mainClass>cn.tedu.sp04.Sp03OrderserviceApplication</mainClass>
                 </configuration>
