--- a/sp04-orderservice/src/main/resources/application.properties
+++ b/sp04-orderservice/src/main/resources/application.properties
@@ -5,4 +5,7 @@ server.port=8201
 #配置注册中心地址
 eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka1:2002/eureka
 
-
+#启用Hystrix
+feign.hystrix.enabled=true
+#
+management.endpoints.web.exposure.include=hystrix.stream
