Turbine聚合服务监控日志展示到Hystrix-dashboard

--- a/sp04-orderservice/src/main/resources/application.properties
+++ b/sp04-orderservice/src/main/resources/application.properties
@@ -7,5 +7,5 @@ eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka1:
 
 #启用Hystrix
 feign.hystrix.enabled=true
-#
+#值监控hystrix.stream的日志
 management.endpoints.web.exposure.include=hystrix.stream
