--- a/sp08-hystrix-dashboard/src/main/resources/application.properties
+++ b/sp08-hystrix-dashboard/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+#端口
 server.port=4001
-
+#要监控的域名
 hystrix.dashboard.proxy-stream-allow-list=localhost,kokonattsucp
+#服务名
+spring.application.name=hystrix-dashboard
+#向注册中心注册
+eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka1:2002/eureka
+#需要聚合数据的服务名
+turbine.app-config=order-service
+#聚合数据的数据名
+turbine.cluster-name-expression=new String("default")
