--- a/sp08-hystrix-dashboard/src/main/resources/application.properties
+++ b/sp08-hystrix-dashboard/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.application.name=hystrix-dashboard
 #向注册中心注册
 eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka1:2002/eureka
 #需要聚合数据的服务名
-turbine.app-config=order-service
+turbine.app-config=order-service,zuul
 #聚合数据的数据名
 turbine.cluster-name-expression=new String("default")
