--- a/sp11-zuul/pom.xml
+++ b/sp11-zuul/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>sp01-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--重试依赖-->
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
