config修改,配置中心服务端

--- a/config/order-service-dev.properties
+++ b/config/order-service-dev.properties
@@ -9,3 +9,6 @@ eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka1:
 feign.hystrix.enabled=true
 #值监控hystrix.stream的日志
 management.endpoints.web.exposure.include=hystrix.stream
+
+#设置配置文件不被覆盖
+spring.cloud.config.override-none=true
