--- a/config/item-service-dev.properties
+++ b/config/item-service-dev.properties
@@ -5,4 +5,5 @@ server.port=8001
 #配置注册中心地址
 eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka1:2002/eureka
 
-
+#设置配置文件不被覆盖
+spring.cloud.config.override-none=true
