--- a/config/user-service-dev.properties
+++ b/config/user-service-dev.properties
@@ -7,3 +7,6 @@ sp.user-service.users=[{\"id\":7, \"username\":\"abc\",\"password\":\"123\"},{\"
 #配置注册中心地址
 eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka1:2002/eureka
 
+#设置配置文件不被覆盖
+spring.cloud.config.override-none=true
+
