--- a/config/zuul-dev.properties
+++ b/config/zuul-dev.properties
@@ -4,7 +4,7 @@ spring.application.name=zuul
 server.port=3201
 #向注册中心注册
 eureka.client.service-url.defaultZone=\
-  http://eureka1:2001/eureka,http://eureka1:2002/eureka
+  http://eureka1:2001/eureka,http://eureka2:2002/eureka
 
 #配置转发规则
 zuul.routes.item-service=/item-service/**
@@ -16,3 +16,6 @@ zuul.retryable=true
 
 #暴露Hystrix监控端点
 management.endpoints.web.exposure.include=hystrix.stream
+
+#设置配置文件不被覆盖
+spring.cloud.config.override-none=true
