--- a/pd-web/src/main/resources/application.yml
+++ b/pd-web/src/main/resources/application.yml
@@ -9,6 +9,13 @@ spring:
         username: root
         password: root
 
+
+    rabbitmq:
+      host: 192.168.64.140    #wht6.cn
+      username: admin
+      password: admin
+      # virtual-host:
+      
 mybatis:
   #typeAliasesPackage: cn.tedu.ssm.pojo
   mapperLocations: classpath:com.pd.mapper/*.xml
