sleuth数据发送到rabbitMQ，再由rabbitMQ抽样展现在zipkin

--- a/springcloud-02/config/item-service-dev.properties
+++ b/springcloud-02/config/item-service-dev.properties
@@ -7,3 +7,10 @@ eureka.client.service-url.defaultZone=http://eureka1:2001/eureka,http://eureka1:
 
 #设置配置文件不被覆盖
 spring.cloud.config.override-none=true
+
+#设置消息中心的地址的账号密码
+spring.rabbitmq.host=192.168.64.140
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+#配置图表数据从什么地方获取
+spring.zipkin.sender.type=rabbit
