--- a/springcloud-02/config/zuul-dev.properties
+++ b/springcloud-02/config/zuul-dev.properties
@@ -19,3 +19,10 @@ management.endpoints.web.exposure.include=hystrix.stream
 
 #设置配置文件不被覆盖
 spring.cloud.config.override-none=true
+
+#设置消息中心的地址的账号密码
+spring.rabbitmq.host=192.168.64.140
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
+#配置图表数据从什么地方获取
+spring.zipkin.sender.type=rabbit
