feature(order): 使用feign减少账户余额和减少库存

--- a/seata-samples/seate-at/order/src/main/resources/application.properties
+++ b/seata-samples/seate-at/order/src/main/resources/application.properties
@@ -19,3 +19,6 @@ mybatis-plus.configuration.map-underscore-to-camel-case=true
 
 #日志级别
 logging.level.cn.tedu.account.mapper=debug
+
+#设置请求等待时间
+ribbon.ReadTimeout=10000
