--- a/seata-samples/seate-at/account/src/main/resources/application.properties
+++ b/seata-samples/seate-at/account/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=account
 server.port=8081
 #\uFFFD\uFFFD\uFFFD\uFFFD\u0534
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/seata_account?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
+spring.datasource.jdbc-url=jdbc:mysql://localhost/seata_account?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
 #\u05E2\uFFFD\uFFFD
