--- a/seata-samples/seate-at/storage/src/main/resources/application.properties
+++ b/seata-samples/seate-at/storage/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8082
 spring.application.name=storage
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost/seata_storage?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
+spring.datasource.jdbc-url=jdbc:mysql://localhost/seata_storage?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
 
