--- a/seata-samples/seata-tcc/order/src/main/resources/application.properties
+++ b/seata-samples/seata-tcc/order/src/main/resources/application.properties
@@ -19,10 +19,10 @@ mybatis-plus.mapper-locations=/mapper/*Mapper.xml
 mybatis-plus.configuration.map-underscore-to-camel-case=true
 
 #\uFFFD\uFFFD\u05BE\uFFFD\uFFFD\uFFFD\uFFFD
-logging.level.cn.tedu.account.mapper=debug
+logging.level.cn.tedu.order.mapper=debug
 
 #\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u0234\uFFFD\u02B1\uFFFD\uFFFD
 ribbon.ReadTimeout=10000
 
-##seata-\u4E8B\u52A1\u7EC4
-#spring.cloud.alibaba.seata.tx-service-group=order_tx_group
+#seata-\u4E8B\u52A1\u7EC4
+spring.cloud.alibaba.seata.tx-service-group=order_tx_group
